--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,20 +37,21 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  /* specifically for hero */
   --hero-button-bg: #4F378B;
   --hero-button-text: #EADDFF;
   --hero-header-text: #381E72;
-
-  /* hero title text */
-  --ifm-hero-text-color: #381E72 !important;
 }
 
+/* configuration for the home banner */
 .heroBanner_qdFl {
   margin: 25px;
   border-radius: var(--border-radius-large);
   color: var(--hero-header-text);
 }
 
+/* the configurations for the "Let's Go!" button */
 .hero__button {
   color: var(--hero-button-text);
   font-weight: 1000;
@@ -66,7 +67,14 @@
   border-color: var(--transparent);
 }
 
+/* style images in blogs to be smaller and round corners */
 .img_ev3q {
   max-width: 35vh;
   border-radius: var(--border-radius);
+}
+
+/* latex prints the equation twice (idk why) */
+/* jerry-rigged patch for it (this is def not what you do but it works so far) */
+.katex-html {
+  display: none;
 }
