--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,75 +6,79 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #6750A4;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-  --transparent: rgba(0, 0, 0, 0);
+    --ifm-color-primary: #6750A4;
+    --ifm-color-primary-dark: #29784c;
+    --ifm-color-primary-darker: #277148;
+    --ifm-color-primary-darkest: #205d3b;
+    --ifm-color-primary-light: #33925d;
+    --ifm-color-primary-lighter: #359962;
+    --ifm-color-primary-lightest: #3cad6e;
+    --ifm-code-font-size: 95%;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+    --transparent: rgba(0, 0, 0, 0);
 
-  --border-radius-large: 25px;
-  --border-radius: 10px;
+    --border-radius-large: 25px;
+    --border-radius: 10px;
 
-  /* specifically for hero */
-  --hero-button-bg: #EADDFF;
-  --hero-button-text: #4F378B;
-  --hero-header-text: #FFFFFF;
-  
+    /* specifically for hero */
+    --hero-button-bg: #EADDFF;
+    --hero-button-text: #4F378B;
+    --hero-header-text: #FFFFFF;
+
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #D0BCFF;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+    --ifm-color-primary: #D0BCFF;
+    --ifm-color-primary-dark: #21af90;
+    --ifm-color-primary-darker: #1fa588;
+    --ifm-color-primary-darkest: #1a8870;
+    --ifm-color-primary-light: #29d5b0;
+    --ifm-color-primary-lighter: #32d8b4;
+    --ifm-color-primary-lightest: #4fddbf;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
-  /* specifically for hero */
-  --hero-button-bg: #4F378B;
-  --hero-button-text: #EADDFF;
-  --hero-header-text: #381E72;
+    /* specifically for hero */
+    --hero-button-bg: #4F378B;
+    --hero-button-text: #EADDFF;
+    --hero-header-text: #381E72;
 }
 
 /* configuration for the home banner */
 .heroBanner_qdFl {
-  margin: 25px;
-  border-radius: var(--border-radius-large);
-  color: var(--hero-header-text);
+    margin: 25px;
+    border-radius: var(--border-radius-large);
+    color: var(--hero-header-text);
 }
 
 /* the configurations for the "Let's Go!" button */
 .hero__button {
-  color: var(--hero-button-text);
-  font-weight: 1000;
+    color: var(--hero-button-text);
+    font-weight: 1000;
 }
 
 .hero__link {
-  display: inline-block;
-  border-color: var(--transparent);
-  background-color: var(--hero-button-bg);
+    display: inline-block;
+    border-color: var(--transparent);
+    background-color: var(--hero-button-bg);
 }
 
 .hero__link:hover {
-  border-color: var(--transparent);
+    border-color: var(--transparent);
 }
 
 /* style images in blogs to be smaller and round corners */
 .img_ev3q {
-  max-width: 35vh;
-  border-radius: var(--border-radius);
+    max-width: 35vh;
+    border-radius: var(--border-radius);
 }
 
 /* latex prints the equation twice (idk why) */
 /* jerry-rigged patch for it (this is def not what you do but it works so far) */
 .katex-html {
-  display: none;
+    display: none;
+}
+
+iframe {
+    border-radius: var(--border-radius);
 }
