--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,6 +20,7 @@
     --border-radius-large: 25px;
     --border-radius: 10px;
 
+    --primary: #4F378B;
     --primary-container: #EADDFF;
     --hero-button-text: #4F378B;
     --hero-header-text: #FFFFFF;
@@ -37,7 +38,8 @@
     --ifm-color-primary-lightest: #4fddbf;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
-    --primary-container: #4F378B;
+    --primary: #4F378B;
+    --primary-container: #4A4458;
     --hero-button-text: #EADDFF;
     --hero-header-text: #381E72;
 }
@@ -58,7 +60,7 @@
 .hero__link {
     display: inline-block;
     border-color: var(--transparent);
-    background-color: var(--primary-container);
+    background-color: var(--primary);
 }
 
 .hero__link:hover {
