working on updating fields

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -82,7 +82,7 @@
 
 /* latex is larger */
 .mjx-chtml {
-    font-size: 1.5em !important;
+    /* font-size: 1.5em !important; */
     /* Adjust value as needed */
 }
 
